# chip-8-rs

./: .gitignore  Cargo.toml  README.md
src/: cpu.rs  lib.rs  main.rs
src/drivers/: display.rs
