[package]
name = "chip8-emu"
version = "0.1.0"
authors = ["Alexander Forehand <forehand.alex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.3.2"
# itertools = "0.8.0"
# ggez = "0.5.1"
rand = "0.7.0"
flexi_logger = "0.14.1"
log = "0.4.8"
imgui = "0.1.0"
imgui-glium-renderer = "0.1.0"
imgui-winit-support = "0.1.0"
clipboard = "0.5"
glium = "*"
glutin = "*"